# rust_rotary_encoder

./: .dockerignore  .gitignore  CHANGES_SUMMARY.md  Cargo.toml  Dockerfile  FIX_ANGLE_NOT_UPDATING.md  IMPLEMENTATION_NOTES.md  IMPLEMENTATION_SUMMARY.md  LICENSE  PROJECT_COMPLETE.md  README.md  TIMER_FIX.md  USER_INSTRUCTIONS.md  build.rs  docker-build.sh  docker-compose.yml  fix-dependencies.sh  sdkconfig.defaults
.cargo/: config.toml
.github/workflows/: rust.yml
docs/: ARCHITECTURE.md  COMPARISON.md  DOCKER.md  HARDWARE_SETUP.md  QUICKSTART.md
examples/: simulate.rs
src/: lib.rs  main.rs  rotary_encoder.rs
