[package]
name = "rust_rotary_encoder"
version = "0.1.0"
authors = ["Rotary Encoder Team"]
edition = "2021"
license = "MIT"

[lib]
name = "rust_rotary_encoder"
path = "src/lib.rs"

[dependencies]
log = "0.4"

# ESP32-specific dependencies
esp-idf-svc = { version = "0.49", default-features = false, optional = true }
esp-idf-hal = { version = "0.44", optional = true }
esp-idf-sys = { version = "0.35", optional = true }
embedded-hal = { version = "1.0", optional = true }
anyhow = { version = "1.0", optional = true }

[dev-dependencies]
env_logger = "0.11"

[build-dependencies]
embuild = "0.32"

[[bin]]
name = "rotary_encoder_example"
path = "src/main.rs"

[[example]]
name = "simulate"
path = "examples/simulate.rs"

[profile.release]
opt-level = "s"

[profile.dev]
debug = true
opt-level = 1
