[package]
name = "rust_rotary_encoder"
version = "0.1.0"
authors = ["Rotary Encoder Team"]
edition = "2021"
license = "MIT"

[lib]
name = "rust_rotary_encoder"
path = "src/lib.rs"

[features]
default = ["std", "esp-idf-svc/native"]

pio = ["esp-idf-svc/pio"]
std = ["alloc", "esp-idf-svc/binstart", "esp-idf-svc/std"]
alloc = ["esp-idf-svc/alloc"]
nightly = ["esp-idf-svc/nightly"]
experimental = ["esp-idf-svc/experimental"]
embassy = ["esp-idf-svc/embassy-sync", "esp-idf-svc/critical-section", "esp-idf-svc/embassy-time-driver"]

[dependencies]
log = "0.4"

# ESP32-specific dependencies
esp-idf-svc = { version = "0.51.0", default-features = false }
esp-idf-hal = { version = "*", default-features = false }
esp-idf-sys = { version = "*", default-features = false }
embedded-hal = { version = "1.0" }
anyhow = { version = "1.0" }
embedded-svc = "0.28"

[dev-dependencies]
env_logger = "0.11"

[build-dependencies]
embuild = { version = "0.31.3", features = ["espidf"] }

[[bin]]
name = "rotary_encoder_example"
path = "src/main.rs"

[[example]]
name = "simulate"
path = "examples/simulate.rs"

[profile.release]
opt-level = "s"

[profile.dev]
debug = true
opt-level = 1
